﻿			     BZFlag Release Notes
			     ====================

BZFlag 2.0.3
------------

* Wait for authentication to complete before entering game - Alfredo Tupone
* Antiban works even on IP number - Alfredo Tupone
* Sort lagstat to have non-observer at the bottom - Thomas Stauer
* Authentication credential are requested asap - Alfredo Tupone
* Allow the use of game device sliders as axes on Windows - Daniel Remenak
* Directional force feedback support - Daniel Remenak
* New icon and menu arrow - Harry Keller, Jeff Meyers
* Special effects for many events - Jeff Meyers, Daniel Remenak
* Server-side plugin API and plugins - Jeff Meyers
* Join menu displays team icon - Daniel Remenak, Harry Keller
* Implemented "-advertise" option for bzfs - Mark Thomas
* The url now does not contain the password (sent with POST) - Tupone Alfredo
* Fixing Tiny tank shooting from the world edge - Tupone Alfredo
* Fixing client requesting lan server on some systems - Tupone Alfredo
* Observer are no more hunted - Tupone Alfredo
* Added 'Always Show Team Scores' option (GUI Options Menu) - Mark Thomas
* Added beautify scores - Julio Jimenez
* Added scoreboard sort option - Mark Thomas, Karsten Behrmann ('BearPerson')
* Shots fired over the boundary wall end at the wall - Daniel Remenak
* Increase range of radar size setting in GUI Option menu - Mark Thomas
* Fixed Menu rendering when radar size is great - Sean Morrison, Mark Thomas
* Fixed Linux name resolution (server list) problem - Sean Morrison
* Fixed Jitter problem on Windows, clock was wrong - Alfredo Tupone
* Windows platform can switch from SDL to native - Alfredo Tupone
* Instruction for X-build from linux to windows - Alfredo Tupone
* bzflag is much less blocking with libcurl - Alfredo Tupone
* Using c-ares instead of adns for DNS resolving - Alfredo Tupone
* Added CTF capture event trigger for world weapons - Jeff Myers, Nathan Goings
* FlipZ on meshpyrs behaves as expected (like pyramids) - Daniel Remenak